--- a/.github/workflows/dailyreport.yml
+++ b/.github/workflows/dailyreport.yml
@@ -3,7 +3,6 @@ name: daily-report
 on:
   schedule:
     - cron: '0 * * * *'
-  workflow_dispatch:
 
 jobs:
   build:
@@ -13,6 +12,10 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
       - name: Run QuiniNow code
         env:
           WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
